--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -1,16 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.lab04.FXMLController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="539.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.lab04.FXMLController">
    <top>
       <Label text="Lab4_Segreteria_Studenti" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets top="20.0" />
          </BorderPane.margin>
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
       </Label>
    </top>
+   <center>
+      <VBox prefHeight="362.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Corso : " translateX="10.0" translateY="10.0" />
+            <ComboBox fx:id="cmbCorsi" prefWidth="150.0" translateX="70.0" translateY="-10.0" />
+            <Button mnemonicParsing="false" onAction="#doCercaIscrittiCorso" text="Cerca iscritti corso" translateX="10.0" translateY="5.0" />
+            <Label text="Studente :" translateX="10.0" translateY="20.0" />
+            <TextField fx:id="txtMatricola" maxWidth="100.0" prefHeight="26.0" prefWidth="135.0" promptText="Matricola" translateX="80.0" />
+            <CheckBox fx:id="bottoneCheck" mnemonicParsing="false" onAction="#doCheck" translateX="200.0" translateY="-21.0" />
+            <TextField fx:id="txtNome" editable="false" maxWidth="100.0" promptText="Nome" translateX="240.0" translateY="-44.0" />
+            <TextField fx:id="txtCognome" editable="false" maxWidth="120.0" promptText="Cognome" translateX="360.0" translateY="-69.0" />
+            <Button mnemonicParsing="false" onAction="#doIscriviti" text="Iscrivi" translateX="484.0" translateY="-54.0" />
+            <Button mnemonicParsing="false" onAction="#doCercaCorsi" text="Cerca corsi" translateX="10.0" translateY="-80.0" />
+            <TextArea fx:id="txtRisultato" maxHeight="180.0" maxWidth="500.0" prefHeight="170.0" prefWidth="500.0" translateX="20.0" translateY="-50.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="2.0" left="4.0" right="4.0" top="2.0" />
+               </padding>
+            </TextArea>
+            <Button mnemonicParsing="false" onAction="#doReset" text="Reset" translateX="484.0" translateY="-20.0" />
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
